--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lerobot"
-version = "0.1.0"
+version = "0.1.1"
 description = "🤗 LeRobot: State-of-the-art Machine Learning for Real-World Robotics in Pytorch"
 authors = [
     "Rémi Cadène <re.cadene@gmail.com>",
@@ -21,13 +21,13 @@ classifiers=[
     "Topic :: Software Development :: Build Tools",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.8",
 ]
 packages = [{include = "lerobot"}]
 
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = "==3.8"
 termcolor = ">=2.4.0"
 omegaconf = ">=2.3.0"
 wandb = ">=0.16.3"
@@ -36,8 +36,8 @@ gdown = ">=5.1.0"
 hydra-core = ">=1.3.2"
 einops = ">=0.8.0"
 pymunk = ">=6.6.0"
-zarr = ">=2.17.0"
-numba = ">=0.59.0"
+zarr = ">=2.16.0"
+numba = ">=0.58.0"
 torch = ">=2.2.1"
 opencv-python = ">=4.9.0"
 diffusers = ">=0.27.2"
@@ -81,7 +81,7 @@ intelrealsense = ["pyrealsense2"]
 
 [tool.ruff]
 line-length = 110
-target-version = "py310"
+target-version = "py308"
 exclude = [
     "tests/data",
     ".bzr",
