--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ pymunk = ">=6.6.0"
 zarr = ">=2.16.0"
 numba = ">=0.58.0"
 torch = ">=2.2.1"
-opencv-python = ">=4.9.0"
+opencv-python = "<=4.9.0"
 diffusers = ">=0.27.2"
 torchvision = ">=0.17.1"
 h5py = ">=3.10.0"
