--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lerobot"
-version = "0.1.0"
+version = "0.1.1"
 description = "🤗 LeRobot: State-of-the-art Machine Learning for Real-World Robotics in Pytorch"
 authors = [
     "Rémi Cadène <re.cadene@gmail.com>",
@@ -21,13 +21,13 @@ classifiers=[
     "Topic :: Software Development :: Build Tools",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.8",
 ]
 packages = [{include = "lerobot"}]
 
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = "==3.8"
 termcolor = ">=2.4.0"
 omegaconf = ">=2.3.0"
 wandb = ">=0.16.3"
@@ -36,14 +36,14 @@ gdown = ">=5.1.0"
 hydra-core = ">=1.3.2"
 einops = ">=0.8.0"
 pymunk = ">=6.6.0"
-zarr = ">=2.17.0"
-numba = ">=0.59.0"
+zarr = ">=2.16.0"
+numba = ">=0.58.0"
 torch = ">=2.2.1"
-opencv-python = ">=4.9.0"
+opencv-python = "<=4.9.0"
 diffusers = ">=0.27.2"
 torchvision = ">=0.17.1"
 h5py = ">=3.10.0"
-huggingface-hub = {extras = ["hf-transfer", "cli"], version = ">=0.25.0"}
+huggingface-hub = {extras = ["hf-transfer"], version = ">=0.23.0"}
 gymnasium = ">=0.29.1"
 cmake = ">=3.29.0.1"
 gym-dora = { git = "https://github.com/dora-rs/dora-lerobot.git", subdirectory = "gym_dora", optional = true }
@@ -56,17 +56,15 @@ pytest = {version = ">=8.1.0", optional = true}
 pytest-cov = {version = ">=5.0.0", optional = true}
 datasets = ">=2.19.0"
 imagecodecs = { version = ">=2024.1.1", optional = true }
-pyav = ">=12.0.5"
+
+moviepy = ">=1.0.3"
 rerun-sdk = ">=0.15.1"
 deepdiff = ">=7.0.1"
-flask = ">=3.0.3"
-pandas = {version = ">=2.2.2", optional = true}
 scikit-image = {version = ">=0.23.2", optional = true}
+pandas = {version = ">=2.2.2", optional = true}
 dynamixel-sdk = {version = ">=3.7.31", optional = true}
 pynput = {version = ">=1.7.7", optional = true}
-# TODO(rcadene, salibert): 71.0.1 has a bug
-setuptools = {version = "!=71.0.1", optional = true}
-pyrealsense2 = {version = ">=2.55.1.6486", markers = "sys_platform != 'darwin'", optional = true}
+
 
 
 [tool.poetry.extras]
@@ -78,12 +76,11 @@ dev = ["pre-commit", "debugpy"]
 test = ["pytest", "pytest-cov"]
 umi = ["imagecodecs"]
 video_benchmark = ["scikit-image", "pandas"]
-dynamixel = ["dynamixel-sdk", "pynput"]
-intelrealsense = ["pyrealsense2"]
+koch = ["dynamixel-sdk", "pynput"]
 
 [tool.ruff]
 line-length = 110
-target-version = "py310"
+target-version = "py308"
 exclude = [
     "tests/data",
     ".bzr",
